--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/background.png
+    - assets/background.png
+    - assets/google.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
