--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   assets:
     - assets/background.png
     - assets/google.png
+    - assets/emojis/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
